Added h3 about final project

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello, World!</h1>
     <h2>I edited a file!</h2>
+	<h3> A project that revolves around finding local events easily.</h3>
 </body>
 </html>
